--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Steve Martín Portfolio</title>
 </head>
+
+<!-- Navigation -->
 <body>
-	
+		<nav class="top-navigation">
+			<div class="content">
+				<ul class="links">
+					<li class="active">Home</li>
+					<li><a href=""</a>About</li>
+					<li><a href=""</a>My Work</li>
+					<li><a href=""</a>Email</li>
+
+				</ul>					
+
+			</div>
+		</nav>	
+
+		<!-- Introduction -->
+		<section class="introduction">
+		<div class="content">
+		<h1>Steve Martín</h1>
+		<h3>Web & Mobile Developer</h3>	
+		<div class="buttons">
+		<button>About</button>
+
+		</div>
+		</div>
+		</section>	
+
 </body>
 </html>
