modified styles and index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Lekton|Monoton|Montserrat|Didact+Gothic|Ubuntu' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/png" href="favicon.ico" />
+	<link href="css/bootstrap.css" rel="stylesheet">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Steve Martín Portfolio</title>
@@ -8,30 +13,45 @@
 
 <!-- Navigation -->
 <body>
-		<nav class="top-navigation">
-			<div class="content">
-				<ul class="links">
-					<li class="active">Home</li>
-					<li><a href=""</a>About</li>
-					<li><a href=""</a>My Work</li>
-					<li><a href=""</a>Email</li>
+	
+		<nav class ="top-navigation">
+		<div class ="content">
+			<ul class ="links">
+				<li><a class="page-scroll" href="#about">About</a>
+				<li><a href=""></a>Work</li>
+				<li><a href=""></a>Email</li>
+			</ul>
 
-				</ul>					
+			<!-- Background Image -->
+		<div class="header">
+		<a class="page-scroll" href="#page-top"><h1>STEVE MARTÍN</h1></a>
+		</div>
+		</div>
+	</nav>
 
-			</div>
-		</nav>	
-
-		<!-- Introduction -->
-		<section class="introduction">
+<!-- Introduction -->
+<section class="introduction">
 		<div class="content">
-		<h1>Steve Martín</h1>
-		<h3>Web & Mobile Developer</h3>	
-		<div class="buttons">
-		<button>About</button>
-
+			<h1>Web & Mobile Developer</h1>
+			  <i class="fa fa-laptop fa-3x"></i>
 		</div>
-		</div>
-		</section>	
+	</section>
 
+	<!-- About -->
+
+<section id="about" class="about">
+		<div class="content">
+			<h2>About</h2>
+		
+			<p>I'm Steve Martín, web and mobile developer. Strong knowledge base working with HTML, CSS, Java Script, and Ruby. Mobile experience with Android Studio and Java. Deadline driven and passionate creative.</p>
+			<br>
+			<p>In addition to web/mobile design I have a rich history in audio. Longtime public radio veteran at NPR's largest Southern California affiliate, 89.3 KPCC. Part time record label owner, and long time DJ and radio show host. Avid vinyl collector and lifelong Bulls fan.</p>
+			
+</div>
+	</section>
+
+	<!-- Work -->
+		
+	
 </body>
 </html>
