various changes to style and index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<link href='https://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Lekton|Monoton|Montserrat|Didact+Gothic|Ubuntu' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Lekton|Monoton|Montserrat|Lato|Didact+Gothic|Ubuntu' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lato:400,900italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="icon" type="image/png" href="favicon.ico" />
 	<link href="css/bootstrap.css" rel="stylesheet">
@@ -15,25 +16,25 @@
 <body>
 	
 		<nav class ="top-navigation">
-		<div class ="content">
+		<div class="content">
 			<ul class ="links">
 				<li><a class="page-scroll" href="#about">About</a>
-				<li><a href=""></a>Work</li>
-				<li><a href=""></a>Email</li>
+				<li><a class="page-scroll" href="#work">Work</a>
+				<li><a href="mailto:steviebuckets33@gmail.com">Email</li></a>
 			</ul>
 
 			<!-- Background Image -->
 		<div class="header">
-		<a class="page-scroll" href="#page-top"><h1>STEVE MARTÍN</h1></a>
+		<a class="page-scroll" href="#page-top"><h1>Home</h1></a>
 		</div>
 		</div>
 	</nav>
 
 <!-- Introduction -->
-<section class="introduction">
+<section id="page-top" class="introduction">
 		<div class="content">
-			<h1>Web & Mobile Developer</h1>
-			  <i class="fa fa-laptop fa-3x"></i>
+			<h1>Steve Martín</h1>
+			<h3>Web & Mobile Developer</h3>
 		</div>
 	</section>
 
@@ -51,7 +52,45 @@
 	</section>
 
 	<!-- Work -->
-		
+	<section id="work" class="work">
+	<h2>Work</h2>
+	<ul class="rig columns-2">
+	<li>
+		<a href="http://codepen.io/sbuckets33/full/qZqZao/"><img src="images/about-me.jpg" /></a>
+		<h3>About Me</h3>
+	</li>
+	<li>
+		<a href="https://drive.google.com/file/d/0Bxv0a3lGT-ybZ3dCWUFJaGFaM2c/view"><img src="images/hack-the-times.jpg"/></a>
+		<h3>Hack the Times</h3>
+	</li>
+	<li>
+		<a href="https://steviebuckets.github.io/startup-landing-page-clone/index.html"><img src="images/karma-clone.jpg"/></a>
+		<h3>Karma Landing Page</h3>
+	</li>
+	<li>
+		<a href="http://mysideofthecity.com/"><img src="images/MSOTC.png" /></a>
+		<h3>Blog</h3>
+	</li>
+</ul>
+</section>
+
+
+<!-- Footer-->
+<footer class="social">
+		<div class="content">
+			<ul class="icons">
+				<li class="github">
+					<a href="https://github.com/steviebuckets"><i class="fa fa-github fa-2x"></i></a>
+				</li>
+				<li class="twitter">
+					<a href="https://twitter.com/mysideofthecity"><i class="fa fa-twitter fa-2x"></i></a>
+				</li>
+				<li class="instagram">
+					<a href="https://www.instagram.com/sbuckets33/"><i class="fa fa-instagram fa-2x"></i></a>
+				</li>
+			</ul>
+		</div>
+	</footer>
 	
 </body>
 </html>
