added images and updated index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="content">
 			<h2>About</h2>
 		
-			<p>I'm Steve Martín, web and mobile developer. Strong knowledge base working with HTML, CSS, Java Script, and Ruby. Mobile experience with Android Studio and Java. Deadline driven and passionate creative.</p>
+			<p>I'm Steve Martín, web and mobile developer. Strong knowledge base working with HTML, CSS, Bootstrap, JavaScript, Ajax and Ruby. Mobile experience with Android Studio and Java. Deadline driven and passionate creative.</p>
 			<br>
 			<p>In addition to web/mobile design I have a rich history in audio. Longtime public radio veteran at NPR's largest Southern California affiliate, 89.3 KPCC. Part time record label owner, and long time DJ and radio show host. Avid vinyl collector and lifelong Bulls fan.</p>
 			
@@ -71,9 +71,40 @@
 		<a href="http://mysideofthecity.com/"><img src="images/MSOTC.png" /></a>
 		<h3>Blog</h3>
 	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/jquery-streetfighter-demo/main.html"><img src="images/street-fighter.jpg" /></a>
+		<h3>Streetfighter jQuery Demo</h3>
+	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/hot-or-cold-starter/index.html"><img src="images/hot-or-cold.jpg" /></a>
+		<h3>Hot or Cold Game</h3>
+	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/stack-overflow-search/index.html"><img src="images/stack-overflow.jpg" /></a>
+		<h3>Stack Overflow Search</h3>
+	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/quiz-app/index.html"><img src="images/quiz-app.jpg" /></a>
+		<h3>Chicago Bulls Fan Quiz</h3>
+	</li>
+	<li>
+		<a href="https://steviebuckets.github.io/shopping-list-app/index.html"><img src="images/shopping-list.jpg" /></a>
+		<h3>Shopping List App</h3>
+	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/signup-form/index.html"><img src="images/signup-form.jpg" /></a>
+		<h3>Sign Up Form</h3>
+	</li>
+	<li>
+		<a href="http://steviebuckets.github.io/youtube-search/index.html"><img src="images/youtube-search.jpg" /></a>
+		<h3>Youtube Search</h3>
+	</li>
+	<li>
+		<a href="https://steviebuckets.github.io/weather-underground-api-app/index.html"><img src="images/weather-app.jpg" /></a>
+		<h3>Weather Underground App</h3>
+	</li>
 </ul>
 </section>
-
 
 <!-- Footer-->
 <footer class="social">
