--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<section id="page-top" class="introduction">
 		<div class="content">
 			<h1>Steve Martín</h1>
-			<h3>Freelance Web & Mobile Developer</h3>
+			<h3>Freelance Web & Mobile Developerr</h3>
 		</div>
 	</section>
 
