--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<p class="technology">
 						Built with HTML & CSS.
 					</p>
-					<!-- <button type="button" class="btn btn-outline-primary">Repo</button> -->
+					<a href="https://github.com/steviebuckets/msotcwebsite"><button type="button" class="btn btn-outline-primary">Repo</button></a>
 					<a href="http://www.mysideofthecity.com/"><button type="button" class="btn btn-outline-primary">Demo</button></a>
 				</div>
 			</div>
