--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
 
 	<section id="about" class="about">
 		<div class="content">
+
 			<h2>About</h2>
 
-			<p>I'm Steve Martin, a free lance web developer based in Los Angeles, CA. I'm a full stack developer fluent in Node.js, React, JavaScript, jQuery, HTML & CSS. I've also worked with Ruby and Android Studio.</p>
+			<img class="profile" src="images/profile.jpg">
+
+			<p>I'm Steve Martín, a freelance web developer based in Los Angeles, CA. I'm a full stack developer fluent in Node.js, React, JavaScript, jQuery, HTML & CSS. I've also worked with Ruby and Android Studio.</p>
 			<br>
-			<p>I'm a public radio audio guru by day and a tortued Bulls fan and Blackberry loyalist always! I'm a life long DJ, vinyl collector and former record label owner. I'm a lover of milk shakes, sneakers, playing hoops and mobile technology.</p>
+			<p>I'm a public radio audio guru by day and a tortured Bulls fan and Blackberry loyalist always! I'm a life long DJ, vinyl collector and former record label owner. I'm a lover of milk shakes, sneakers, playing hoops and mobile technology.</p>
 
 		</div>
 	</section>
 	<div class="grid" id="work" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200}'>
 		<div class="grid-item">
-			<img src="images/podfeed2.png" class="image" />
+			<img src="images/pod.png" class="image" />
 			<div class="overlay">
 				<div class="text">
 					<p class="title">Pod Feed</p>
@@ -68,7 +71,7 @@
 				<div class="text">
 					<p class="title">On-Wax</p>
 					<p class="description">
-						A blog for DJ's and record collectors. Upload and share photos of your collection.
+						A blog for DJ's and record collectors. Upload and share photos of your record collection.
 					</p>
 					<p class="technology">
 						Built with JavaScript, jQuery, Node.js, Mongoose.
@@ -79,7 +82,7 @@
 			</div>
 		</div>
 		<div class="grid-item">
-			<img src="images/action-cookies.png" />
+			<img src="images/cookies.png" class="image" />
 			<div class="overlay-black">
 				<div class="text">
 					<p class="title">Action Cookies</p>
@@ -95,7 +98,7 @@
 			</div>
 		</div>
 		<div class="grid-item">
-			<img src="images/MSOTC.png" />
+			<img src="images/ms.png" class="image" />
 			<div class="overlay-yellow">
 				<div class="text">
 					<p class="title">My Side of The City</p>
